# hello-cpp-modules

./: CMakeLists.txt  CMakeSettings.json  README.md
src/cpp/app/: CMakeLists.txt  main.cpp
